changed to .present?

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -14,7 +14,7 @@
       Add a new board
     </h2>
 
-    <% if current_user != nil %>
+    <% if current_user.present? %>
       <form action="/insert_board" method="post">
         <div>
           <label for="name_box">
